address spacing issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -105,7 +105,7 @@ a:hover {
     gap: .5rem;
     flex-wrap: wrap;
     padding: 32px 3%;
-    margin: 40px 0 60px;
+    margin: 40px 0 80px;
     box-shadow: var(--box-shadow);
 }
 
@@ -482,6 +482,7 @@ a:hover {
 
 .services__header {
     text-align: center;
+    margin-bottom: 150px;
 }
 
 .services__header-title {
